--- a/src/main/resources/static/css/reg.css
+++ b/src/main/resources/static/css/reg.css
@@ -1,9 +1,10 @@
 body, html {
 	height: 100%;
-	background-color: #efe7e1;
+	background-color: #333232;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: Varela Round;
 }
 
 html {
@@ -12,23 +13,36 @@ html {
  
 #regForm {
  	min-width: 300px;
- 	width: 30vw;
  	position: fixed;
- 	top: 1vh;
-	left: 35vw;
+ 	top: 10vh;
+ 	left: 38vw;
 	background: white;
-	padding:2vh 2vw;
 	border-radius: 8px;
-	border: 1px solid grey;
+	border: 1px solid #CCCCCC;
 	opacity: .9;
+	padding: 10px;
 }
 
-#messageContainer {
-	margin: 3vh 1vw;
+#button {
+	background-color: #CBB8A9;
+	color: #F1F5F4;
+	border-radius: 5px;
+	border: none;
+	padding: 7px 12px 7px 12px;
+}
+
+#button:hover {
+	background-color: #88958D;
 }
 
 a {
-	color: #5c87a7;
+	color: #88958D;
+	transition: all ease-in-out 200ms;
+}
+
+a:hover {
+	color: #CBB8A9;
+	text-decoration: none;
 }
 
 p {
@@ -36,15 +50,6 @@ p {
 	margin-top: 15px;
 }
 
-input[type=text]:focus:not([readonly]) + label, input[type=password]:focus:not([readonly]) + label {
-            color: #E9AD71; 
-        }
-        
-input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]) {
-            border-bottom: 1px solid #E9AD71;
-            box-shadow: 0 1px 0 0 #E9AD71; 
-        }
-        
 #imageBox img{
 	height:7vh;
 	width:7vh;
@@ -68,7 +73,7 @@ input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly
   position:relative;
   padding:25px 15px;
   margin:1em 0 3em;
-  border:5px solid #A6A6A6;
+  border:5px solid #88958D;
   text-align:center;
   color:#333;
   background:#fff;
@@ -89,7 +94,7 @@ input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly
   height:25px;
   border-style:solid;
   border-width:0 5px 5px 0;
-  border-color:#A6A6A6;
+  border-color:#88958D;
   background:#FFFFFF;
   /* css3 */
   -webkit-border-bottom-right-radius:80px 50px;
@@ -110,8 +115,8 @@ input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly
   height:25px;
   border-style:solid;
   border-width:0 5px 5px 0;
-  border-color:#A6A6A6;
-  background:#efe7e1;
+  border-color:#88958D;
+  background:#333232;
   /* css3 */
   -webkit-border-bottom-right-radius:40px 50px;
   -moz-border-radius-bottomright:40px 50px;
@@ -128,7 +133,7 @@ input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly
   left:49px;
   width:5px;
   height:5px;
-  background:#A6A6A6;
+  background:#88958D;
   /* css3 */
   -webkit-border-radius:10px;
   -moz-border-radius:10px;
@@ -193,7 +198,7 @@ span {
   position:relative;
   padding:25px 15px;
   margin:1em 0 3em;
-  border:5px solid #A6A6A6;
+  border:5px solid #88958D;
   text-align:center;
   color:#333;
   background:#fff;
@@ -214,7 +219,7 @@ span {
   height:25px;
   border-style:solid;
   border-width:0px 0px 5px 5px;
-  border-color:#A6A6A6;
+  border-color:#88958D;
   background:#FFFFFF;
   /* css3 */
   -webkit-border-bottom-left-radius:80px 50px;
@@ -235,8 +240,8 @@ span {
   height:25px;
   border-style:solid;
   border-width:0px 0px 5px 5px;
-  border-color:#A6A6A6;
-  background:#efe7e1;
+  border-color:#88958D;
+  background:#333232;
   /* css3 */
   -webkit-border-bottom-left-radius:40px 50px;
   -moz-border-radius-bottomleft:40px 50px;
@@ -253,7 +258,7 @@ span {
   right:49px;
   width:5px;
   height:5px;
-  background:#A6A6A6;
+  background:#88958D;
   /* css3 */
   -webkit-border-radius:10px;
   -moz-border-radius:10px;
