commit before rebase

--- a/src/main/resources/static/css/dash.css
+++ b/src/main/resources/static/css/dash.css
@@ -5,6 +5,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: Varela Round;
 }
 
 html {
