--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -5,6 +5,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    font-family: Varela Round;
 }
 
 html {
@@ -17,33 +18,25 @@ html {
 }
 
 .card {
-    padding-top: 20px;
-    margin: 10px 0 20px 0;
-    background-color: rgba(214, 224, 226, 0.2);
-    border-top-width: 0;
-    border-bottom-width: 2px;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
+    margin: 30px 0 20px 0;
     border-radius: 3px;
-    -webkit-box-shadow: none;
-    -moz-box-shadow: none;
     box-shadow: none;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
 .card.hovercard {
+	display: inline-block;
     width: 20vw;
     position: relative;
     padding-top: 0;
     overflow: hidden;
     text-align: center;
-    background-color: rgba(214, 224, 226, 0.2);
+    background-color: #F1F5F4;
+    border: 1px solid #E3E4DB;
 }
 
 .card.hovercard .cardheader {
-    background-color: #CBB8A9;
+    background-color: #88958D;
     background-size: cover;
     height: 70px;
 }
@@ -63,7 +56,7 @@ html {
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     border-radius: 50%;
-    border: 5px solid rgba(255,255,255,0.5);
+    border: 3px solid rgba(255,255,255,0.5);
 }
 
 .card.hovercard .info {
@@ -76,4 +69,31 @@ html {
     line-height: 1;
     color: #E3E4DB;
     vertical-align: middle;
+}
+
+.userFeed {
+	display: inline-block;
+	vertical-align: top;
+	width: 35vw;
+	height: 80vh;
+	border: 1px solid #E3E4DB;
+	border-radius: 3px;
+	margin: 15px;
+	margin-top: 30px;
+	background-color: #F1F5F4;
+	color: #A6A6A6;
+	padding: 5px;
+}
+
+#friends {
+	display: inline-block;
+	vertical-align: top;
+	width: 22vw;
+	height: 80vh;
+	border: 1px solid #E3E4DB;
+	border-radius: 3px;
+    margin: 30px 0 20px 0;
+    background-color: #F1F5F4;
+    color: #A6A6A6;
+    padding: 5px;
 }
