--- a/src/main/resources/static/css/dash.css
+++ b/src/main/resources/static/css/dash.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Varela Round;
+    overflow: hidden;
 }
 
 html {
@@ -15,4 +16,45 @@ html {
 #profPic {
 	height: 5vh;
 	width: 3vw;
+}
+
+#map {
+	border: 1px solid #F1F3F4;
+	border-radius: 3px;
+}
+
+#twapFeed {
+	border: 1px solid #CCCCCC;
+	border-radius: 3px;
+	height: 80vh;
+	width: 23vw;
+	margin-top: 4vh;
+	background-color: #F1F5F4;
+}
+
+#twapIt {
+	text-align: right;
+	padding-right: 2vw;
+}
+
+span {
+	color: #F1F5F4;
+	font-weight: bolder;
+}
+
+#twapButton {
+	margin-top: 3px;
+	border: none;
+	color: #CBB8A9;
+	background-color: transparent;
+}
+
+#twapButton:hover {
+	color: #88958D;
+}
+
+p {
+	color: #CCCCCC;
+	font-style: italic;
+	margin-bottom: 3px;
 }
