--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -6,6 +6,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     font-family: Varela Round;
+    overflow: hidden;
 }
 
 html {
@@ -13,8 +14,8 @@ html {
 }
 
 #profPic {
-	height: 5vh;
-	width: 3vw;
+	height: 40px;
+	width: 40px;
 }
 
 .card {
@@ -100,4 +101,24 @@ html {
 
 #logoutForm {
 	display: none;
+}
+
+.user_pic {
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+}
+
+#results {
+	z-index: 2;
+	right: 38px;
+	position: absolute;
+	background-color: #fff;
+	width: 170px;
+	top: 25px;
+}
+
+.user_info {
+	display: inline-block;
+	vertical-align: middle;
 }
