--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -72,10 +72,17 @@ html {
     vertical-align: middle;
 }
 
-.userFeed {
+#twapFeed {
+	overflow: hidden;
+	height: 100%;
+	width: 100%;
+	position: relative;
+}
+
+#userFeed {
 	display: inline-block;
 	vertical-align: top;
-	width: 35vw;
+	width: 40vw;
 	height: 80vh;
 	border: 1px solid #E3E4DB;
 	border-radius: 3px;
@@ -84,6 +91,7 @@ html {
 	background-color: #F1F5F4;
 	color: #A6A6A6;
 	padding: 5px;
+	overflow-y: scroll;
 }
 
 #friends {
@@ -103,22 +111,100 @@ html {
 	display: none;
 }
 
-.user_pic {
-	height: 40px;
-	width: 40px;
-	border-radius: 50%;
+#invites {
+	z-index: 2;
+	position: absolute;
+	background-color: #fff;
+	width: 222px;
+	top: 50px;
+	left: 163px;
+}
+
+a {
+	color: #E3E4DB;
+}
+
+.g:hover {
+	color: green;
+}
+
+.r:hover {
+	color: red;
+}
+
+.text {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+#searchUsers {
+	width: 230px;	
 }
 
 #results {
 	z-index: 2;
-	right: 38px;
+	right: 40px;
 	position: absolute;
 	background-color: #fff;
-	width: 170px;
+	width: 230px;
 	top: 25px;
 }
 
 .user_info {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.search_result {
+	border: 1px solid #CCCCCC;
+	border-top: none;
+}
+.search_result:hover {
+	background-color: #EEEEEE;
+}
+
+.user_pic {
+	height: 40px;
+	width: 40px;
+	border-radius: 50%;
+	margin: 5px;
+}
+
+.user_name {
+	margin: 0px;
+	font-weight: bold;
+	color: #000;
+}
+.user_email {
+	margin: 0px;
+	font-weight: 100;
+	color: #E3E4DB;
+}
+
+.twapStuff {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.time {
+	display: inline-block;
+	margin: 0px;
+}
+
+.twapText {
+	margin: 0px;
+}
+
+.twapDel:hover {
+	color: red;
+}
+
+ul {
+	list-style: none;
+	padding: 0px;
+}
+
+.friendInfo {
 	display: inline-block;
 	vertical-align: middle;
 }
