--- a/src/main/resources/static/css/user.css
+++ b/src/main/resources/static/css/user.css
@@ -13,9 +13,83 @@ html {
 	font-size: 13px;
 }
 
-#profPic {
+#invites {
+	z-index: 2;
+	position: absolute;
+	background-color: #fff;
+	width: 222px;
+	top: 50px;
+	left: 163px;
+}
+
+a {
+	color: #E3E4DB;
+}
+
+.g:hover {
+	color: green;
+}
+
+.r:hover {
+	color: red;
+}
+
+.text {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+#searchUsers {
+	width: 230px;	
+}
+
+.profPic {
+	width: 40px;
+	height: 40px;
+}
+
+#logoutForm {
+	display: none;
+}
+
+#results {
+	z-index: 2;
+	right: 40px;
+	position: absolute;
+	background-color: #fff;
+	width: 230px;
+	top: 25px;
+}
+
+.user_info {
+	display: inline-block;
+	vertical-align: middle;
+}
+
+.search_result {
+	border: 1px solid #CCCCCC;
+	border-top: none;
+}
+.search_result:hover {
+	background-color: #EEEEEE;
+}
+
+.user_pic {
 	height: 40px;
 	width: 40px;
+	border-radius: 50%;
+	margin: 5px;
+}
+
+.user_name {
+	margin: 0px;
+	font-weight: bold;
+	color: #000;
+}
+.user_email {
+	margin: 0px;
+	font-weight: 100;
+	color: #CBB8A9;
 }
 
 .card {
@@ -27,7 +101,7 @@ html {
 
 .card.hovercard {
 	display: inline-block;
-    width: 20vw;
+	width: 100%;
     position: relative;
     padding-top: 0;
     overflow: hidden;
@@ -72,32 +146,24 @@ html {
     vertical-align: middle;
 }
 
-#twapFeed {
-	overflow: hidden;
-	height: 100%;
-	width: 100%;
-	position: relative;
-}
-
 #userFeed {
 	display: inline-block;
 	vertical-align: top;
-	width: 40vw;
+	width: 100%;
 	height: 80vh;
 	border: 1px solid #E3E4DB;
 	border-radius: 3px;
-	margin: 15px;
 	margin-top: 30px;
 	background-color: #F1F5F4;
 	color: #A6A6A6;
 	padding: 5px;
-	overflow-y: scroll;
+	overflow: scroll;
 }
 
 #friends {
 	display: inline-block;
 	vertical-align: top;
-	width: 22vw;
+	width: 100%;
 	height: 80vh;
 	border: 1px solid #E3E4DB;
 	border-radius: 3px;
@@ -105,80 +171,6 @@ html {
     background-color: #F1F5F4;
     color: #A6A6A6;
     padding: 5px;
-}
-
-#logoutForm {
-	display: none;
-}
-
-#invites {
-	z-index: 2;
-	position: absolute;
-	background-color: #fff;
-	width: 222px;
-	top: 50px;
-	left: 163px;
-}
-
-a {
-	color: #E3E4DB;
-}
-
-.g:hover {
-	color: green;
-}
-
-.r:hover {
-	color: red;
-}
-
-.text {
-	display: inline-block;
-	vertical-align: middle;
-}
-
-#searchUsers {
-	width: 230px;	
-}
-
-#results {
-	z-index: 2;
-	right: 40px;
-	position: absolute;
-	background-color: #fff;
-	width: 230px;
-	top: 25px;
-}
-
-.user_info {
-	display: inline-block;
-	vertical-align: middle;
-}
-
-.search_result {
-	border: 1px solid #CCCCCC;
-	border-top: none;
-}
-.search_result:hover {
-	background-color: #EEEEEE;
-}
-
-.user_pic {
-	height: 40px;
-	width: 40px;
-	border-radius: 50%;
-	margin: 5px;
-}
-
-.user_name {
-	margin: 0px;
-	font-weight: bold;
-	color: #000;
-}
-.user_email {
-	margin: 0px;
-	font-weight: 100;
-	color: #E3E4DB;
 }
 
 .twapStuff {
